[project]
name = "check-cloud-drives"
version = "0.1.0"
description = "A PySide6 GUI application for monitoring cloud drive status via rclone"
readme = "README.md"
authors = [
    {name = "Rich Lewis", email = "", github = "@RichLewis007"}
]
requires-python = ">=3.11"
dependencies = [
    "PySide6==6.7.3",
    "tomli-w>=1.0.0",
]

[project.scripts]
check-cloud-drives = "check_cloud_drives.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/check_cloud_drives"]
shared-data = { "assets" = "assets" }

[tool.hatch.build.targets.editable]
dev-mode-dirs = ["src"]

# Ruff configuration for linting and formatting
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff>=0.14.7",
    "pytest>=8.0.0",
    "pytest-qt>=4.2.0",
    "pytest-mock>=3.12.0",
]
